tests/paczka1/small_fuzzy/36063991.err
Error in line 2: GLoEUMEmS A108 30,1
Error in line 5: GLoEUMEmS S323 37,5
